--- a/.github/workflows/main_pgi-server-2.yml
+++ b/.github/workflows/main_pgi-server-2.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - pgi-server-2
 
 on:
@@ -27,10 +24,10 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          npm run test --if-present # Ensure Jest is installed
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -56,7 +53,11 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
+
+      - name: Install dependencies on deployment
+        run: |
+          npm install # Ensure dependencies are installed before deploying
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -70,5 +71,4 @@ jobs:
         with:
           app-name: 'pgi-server-2'
           slot-name: 'Production'
-          package: .
-          
+          package: .  # Deploy the extracted contents
