--- a/.github/workflows/main_pgi-server-2.yml
+++ b/.github/workflows/main_pgi-server-2.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present # Ensure Jest is installed
+          npm run test -- --passWithNoTests  # Add flag to pass if no tests are found
 
       - name: Zip artifact for deployment
         run: zip -r release.zip ./*
