--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10",
-    "jest": "^26.0.0"
+    "nodemon": "^3.1.10"
   }
 }
