--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node app.js",
     "migrate": "sequelize-cli db:migrate",
     "seed": "sequelize-cli db:seed:all",
-    "test": "jest"
+   
+      "test": "jest --passWithNoTests"
   },
   "keywords": [],
   "author": "",
