--- a/.github/workflows/main_pgi-server-2.yml
+++ b/.github/workflows/main_pgi-server-2.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read  # This is required for actions/checkout
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -20,14 +20,14 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: Install dependencies
+      - name: npm install, build, and test
         run: |
-          npm install  # Install dependencies (ensure Jest is included)
-          npm run build --if-present  # Run build if defined
-          npm run test -- --passWithNoTests  # Run tests and pass if no tests are found
+          npm install
+          npm run build --if-present
+          npm run test -- --passWithNoTests  # Add flag to pass if no tests are found
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./*  # Zip the contents for deployment
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -42,8 +42,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write  # This is required for requesting the JWT
-      contents: read  # This is required for actions/checkout
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -56,7 +56,7 @@ jobs:
 
       - name: Install dependencies on deployment
         run: |
-          npm install  # Ensure dependencies are installed before deploying
+          npm install # Ensure dependencies are installed before deploying
 
       - name: Login to Azure
         uses: azure/login@v2
